Sort comments for overtime, sick notes and applications descending by id
closes #5414