@@ -12,11 +12,14 @@ import org.synyx.urlaubsverwaltung.application.vacationtype.VacationTypeService;
 import org.synyx.urlaubsverwaltung.person.Person;
 import org.synyx.urlaubsverwaltung.person.PersonService;
 
+import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.synyx.urlaubsverwaltung.application.comment.ApplicationCommentAction.ALLOWED;
 import static org.synyx.urlaubsverwaltung.application.comment.ApplicationCommentAction.ALLOWED_DIRECTLY;
+import static org.synyx.urlaubsverwaltung.application.comment.ApplicationCommentAction.COMMENTED;
+
 
 @SpringBootTest
 @Transactional
@@ -37,7 +40,7 @@ class ApplicationCommentRepositoryIT extends SingleTenantTestContainersBase {
     @Test
     void ensureDeleteByApplicationPerson() {
 
-        final VacationType<?> vacationType = vacationTypeService.getActiveVacationTypes().get(0);
+        final VacationType<?> vacationType = vacationTypeService.getActiveVacationTypes().getFirst();
 
         final Person person = personService.create("batman", "Bruce", "Wayne", "batman@example.org");
         final Application application = new Application();
@@ -66,5 +69,28 @@ class ApplicationCommentRepositoryIT extends SingleTenantTestContainersBase {
             assertThat(commentEntity.getPerson()).isSameAs(person);
             assertThat(commentEntity.getText()).isEqualTo("Whoop");
         });
+    }
+
+    @Test
+    void ensureToGetApplicationCommentsInCorrectOrder() {
+
+        final VacationType<?> vacationType = vacationTypeService.getActiveVacationTypes().getFirst();
+
+        final Person person = personService.create("batman", "Bruce", "Wayne", "batman@example.org");
+
+        final Application application = new Application();
+        application.setPerson(person);
+        application.setVacationType(vacationType);
+        final Application savedApplication = applicationService.save(application);
+
+        final ApplicationComment first = applicationCommentService.create(savedApplication, COMMENTED,  Optional.of("first"), person);
+        final ApplicationComment second = applicationCommentService.create(savedApplication, COMMENTED,  Optional.of("second"), person);
+        final ApplicationComment third = applicationCommentService.create(savedApplication, COMMENTED,  Optional.of("third"), person);
+        final ApplicationComment fourth = applicationCommentService.create(savedApplication, COMMENTED,  Optional.of("fourth"), person);
+
+        final List<ApplicationCommentEntity> applicationComments = sut.findByApplicationIdOrderByIdDesc(savedApplication.getId());
+        assertThat(applicationComments)
+            .extracting(ApplicationCommentEntity::getId)
+            .containsExactly(fourth.id(), third.id(), second.id(), first.id());
     }
 }
